--- a/app/views/rides/index.html.erb
+++ b/app/views/rides/index.html.erb
@@ -12,7 +12,7 @@
                 <div class="card-body">
                   <h5 class="card-title"> <%= ride.course.name %></h5>
                   <p>Date : <%= ride.rided_at %></p>
-                  <p>Temps réalisé : <%= ride.timing < 60 ? "#{ride.timing} min" : "#{ }" %> </p>
+                  <p>Temps réalisé : <%= ride.timing %> min</p>
                   <p>Distance réalisée: <%= ride.distance %>km</p>
                   <p>Money gagnée: <%= ride.money %>D</p>
                   <p class="card-text"><small class="text-body-secondary"></small></p>
