--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <% if (params[:controller] == "rides" && (params[:action] == "edit" || params[:action] == "index" || params[:action] == "navigate" || params[:action] == "map")) %>
+        <% if (params[:controller] == "rides" && (params[:action] == "edit" || params[:action] == "navigate" || params[:action] == "map")) %>
           <%= link_to map_path, class: "nav-link active" do %>
             <i class="fa-solid fa-map-location-dot"></i>
           <% end %>
