--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,6 @@
 @import "rewards/index";
 @import "rides/index";
 @import "user_rewards/index";
-@import "rides/show";
-
+@import "courses/index";
 //Import Mapbox libraries
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css");
