--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -7,10 +7,17 @@
             <% @reviews.each do |review| %>
               <div class="carousel-item bg-body <%= 'active' if review == @reviews.first %>">
                 <div class="card shadow p-3 m-3 bg-body-tertiary rounded" style="width: 91%;">
-                  <p class="card-text">Utilisateur: <%= review.user.firstname %></p>
+                  <h4 class="card-text"><%= cl_image_tag review.user.photo.key, height: 100, width: 100, gravity: "face", crop: "fill", style: "border-radius: 50%" %> <span class="ms-3"><%= review.user.firstname %></span></h4>
                   <div class="card-body">
-                    <p class="card-text"><%= review.comment %></p>
-                    <p class="card-text">Note: <%= review.rating %>/5</p>
+                    <p class="card-text" style="font-size: 19px;"><%= review.comment %></p>
+                    <div class="me-auto p-2" style="color: #895f33;">
+                      <% @course.average.to_i.times do %>
+                        <i class="fa-solid fa-star"></i>
+                      <% end %>
+                      <% (5 - @course.average.to_i).times do %>
+                        <i class="fa-regular fa-star"></i>
+                      <% end %>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -125,10 +132,10 @@
       <div class="col-12">Description : <%= @course.description %></div>
     </div>
     <div class="d-flex justify-content-center">
-      <button type="button" id="buttonAvis" class="border-0 btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalAvis">Avis</button>
+      <button type="button" id="buttonAvis" class="border-0 btn btn-primary dropdown-filters" data-bs-toggle="modal" data-bs-target="#myModalAvis">Avis</button>
     </div>
     <div class="d-flex justify-content-center" data-controller="redirect-ride" data-redirect-ride-course-value="<%= [{ lat: @course.latitude, lng: @course.longitude}].to_json %>">
-      <%= link_to 'En route !', course_rides_path(@course), data: { 'turbo-method' => :post }, class: 'btn btn-primary btn-launch-ride', id: "buttonRide" %>
+      <%= link_to 'En route !', course_rides_path(@course), data: { 'turbo-method' => :post }, class: 'btn btn-primary btn-launch-ride dropdown-filters', id: "buttonRide" %>
     </div>
   </div>
 </div>
