--- a/app/views/user_rewards/index.html.erb
+++ b/app/views/user_rewards/index.html.erb
@@ -13,12 +13,12 @@
       </p>
       <p class="card-text">
           <b>Prix réduit: </b>
-          <%= ((user_reward.reward.price * 100 - user_reward.reward.reduction) / 100.0).round(2) %> €</p>
+          <%= user_reward.reduction_price %> €</p>
     </div>
             <div class="progress">
-              <% if user_reward.progress == 'en cours' %>
+              <% if user_reward.progress == 'pending' %>
                 <div class="progress-bar bg-warning" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-              <% elsif user_reward.progress == 'terminé' %>
+              <% elsif user_reward.progress == 'used' %>
                 <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               <% end %>
             </div>
@@ -29,11 +29,15 @@
                 <i>Terminé</i>
               <% end %>
              </p>
-
-            <button data-action="click->promo-code#showCode" data-promo-code-target="button" class="btn simpleButton mt-2">Code promo</button>
-            <div data-promo-code-target="code" class="mt-2" style="display: none;">
-              <span id="promo-code-<%= user_reward.id %>" style="display: none;"><%= user_reward.reward.promocode %></span>
-              <span id="feedback-text" style="display: none; margin-left: 10px">Copié !</span>
+            <div class="d-flex justify-content-between">
+              <div class="d-flex flex-column">
+                <button data-action="click->promo-code#showCode" data-promo-code-target="button" class="btn simpleButton mt-2">Code promo</button>
+                <div data-promo-code-target="code" class="mt-2" style="display: none; position: relative;">
+                  <span id="promo-code-<%= user_reward.id %>" style="display: none;"><%= user_reward.reward.promocode %></span>
+                  <span id="feedback-text" style="display: none;">Copié !</span>
+                </div>
+              </div>
+              <%= link_to "Acheter !", user_reward.reward.link, class: "btn simpleButton", style: "max-height: 52px;" %>
             </div>
           </div>
         </div>
