--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -29,3 +29,5 @@ $border-radius-xxl: 1rem;
 
 // Override other variables below!
 $carousel-control-color: $gray;
+
+$form-check-input-checked-bg-color:       $brown;
