--- a/app/views/rides/edit.html.erb
+++ b/app/views/rides/edit.html.erb
@@ -17,7 +17,7 @@
             <%= f.input :timing, required: true, :as => :hidden %>
           </div>
           <div class="form-actions">
-            <%= f.button :submit, "Stopper la course !", class: "btn btn-primary" %>
+            <%= f.button :submit, "Stopper la course !", class: "btn simpleButton" %>
           </div>
         <% end %>
       </div>
