--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -43,7 +43,7 @@
       <% end %>
     </div>
     <div class="d-flex justify-content-center p-1">
-      <button type="button" id="simpleButton" class="border-0 btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalPhoto">Photo de la course</button>
+      <button type="button" id="simpleButton" class="border-0 btn btn-primary simpleButton" data-bs-toggle="modal" data-bs-target="#modalPhoto">Photo de la course</button>
     </div>
     <div class="modal fade" id="modalPhoto" tabindex="-1" aria-labelledby="modal photo" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
