--- a/app/views/rewards/_presentdetails.html.erb
+++ b/app/views/rewards/_presentdetails.html.erb
@@ -12,7 +12,7 @@
             <li class="list-group-item1"><%= reward.price %></li>
             <li class="list-group-item"><%= ((reward.price * 100 - reward.reduction) / 100.0).round(2) %></li>
           </ul>
-          <%= link_to "coucou", user_rewards_path(user_reward: { reward_id: reward.id, user_id: current_user.id }), data: { 'turbo-method' => :post }, class: "btn btn-primary" %>
+          <%= link_to "Sélectionner", user_rewards_path(user_reward: { reward_id: reward.id, user_id: current_user.id }), data: { 'turbo-method' => :post }, class: "btn simpleButton" %>
         </div>
       </div>
     </div>
