--- a/app/views/rides/index.html.erb
+++ b/app/views/rides/index.html.erb
@@ -1,27 +1,29 @@
 <div class="container">
   <div class="row justify-content-center">
     <% @rides.each do |ride| %>
-      <div class="col-12">
-        <div class="mt-4 mx-auto">
-          <div class="card mb-3">
-            <div class="row">
-              <div class="col-5 h-100 pe-0">
-                <%= image_tag ride.course.geojson, class:"img-fluid rounded-start" %>
-              </div>
-              <div class="col-7 px-0">
-                <div class="card-body">
-                  <h5 class="card-title"> <%= ride.course.name %></h5>
-                  <p>Date : <%= ride.rided_at %></p>
-                  <p>Temps réalisé : <%= ride.timing %> </p>
-                  <p>Distance réalisée: <%= ride.distance %>km</p>
-                  <p>Money gagnée: <%= ride.money %>D</p>
-                  <p class="card-text"><small class="text-body-secondary"></small></p>
+      <%= link_to ride_path(ride) do %>
+        <div class="col-12">
+          <div class="mt-4 mx-auto">
+            <div class="card mb-3">
+              <div class="row">
+                <div class="col-5 h-100 pe-0">
+                  <%= image_tag ride.course.geojson, class:"img-fluid rounded-start" %>
+                </div>
+                <div class="col-7 px-0">
+                  <div class="card-body">
+                    <h5 class="card-title"> <%= ride.course.name %></h5>
+                    <p>Date : <%= ride.rided_at %></p>
+                    <p>Temps réalisé : <%= ride.timing %> </p>
+                    <p>Distance réalisée: <%= ride.distance %>km</p>
+                    <p>Money gagnée: <%= ride.money %>D</p>
+                    <p class="card-text"><small class="text-body-secondary"></small></p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
 </div>
