--- a/app/views/dogs/_modal.html.erb
+++ b/app/views/dogs/_modal.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-dialog modal-dialog-centered modal-xl mt-5">
     <div class="modal-content">
       <div class="modal-header position-relative d-flex justify-content-between">
-        <h5 class="modal-title font-18">Ajouter un chien</h5>
+        <h5 class="modal-title">Ajouter un chien</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
