--- a/app/views/dogs/_dog.html.erb
+++ b/app/views/dogs/_dog.html.erb
@@ -1,9 +1,9 @@
 <div class="card mx-4" style="width: 16rem;">
   <%= cl_image_tag dog.photo.key, height: 150, width: 150, crop: "fill", radius: "max", class: "dog-image" %>
   <div class="card-body d-flex flex-column align-items-center">
-    <h5 class="card-title"><%= dog.name %></h5>
+    <h5 class="card-title-dog"><%= dog.name %></h5>
     <p class="card-text">Age: <%= dog.age %></p>
     <p class="card-text">Race: <%= dog.race %></p>
-    <%= link_to "Retirer", dog_path(dog), data: { turbo_method: "delete" }, class: "btn btn-primary", id: "simpleButton"%>
+    <%= link_to "Retirer", dog_path(dog), data: { turbo_method: "delete" }, class: "btn btn-delete", id: "simpleButton"%>
   </div>
 </div>
