--- a/app/views/rides/show.html.erb
+++ b/app/views/rides/show.html.erb
@@ -11,7 +11,7 @@
 </div>
       <%= render 'shared/map', course: @ride.course, style_list: "width: 100%; height: 215px; border-radius: 20px; box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.4)" %>
         <div class="d-flex justify-content-around p-2">
-          <div class="col-sm-4"><%= @ride.course.timing %>min</div>
+          <div class="col-sm-4"><%="#{@ride.duration[:hours]}h" if @ride.duration[:hours] > 0 %><%=" #{@ride.duration[:minutes]}min" if @ride.duration[:minutes] > 0 %><%= " #{@ride.duration[:seconds]}secs" %></div>
           <div class="col-sm-4"><%= @ride.course.distance %>m</div>
           <div class="col-sm-4"><%= @ride.course.distance %>m</div>
         </div>
