--- a/app/views/courses/_list.html.erb
+++ b/app/views/courses/_list.html.erb
@@ -1,6 +1,15 @@
-  <div class="container w-100" data-filter-target="list">
+  <div class="container w-100 position-relative" data-filter-target="list">
     <% courses.each do |course| %>
       <div class="card mb-3">
+        <div class="position-absolute" style="z-index: 1500; top: 35px; left: 35px;">
+          <% if user_signed_in? %>
+            <% if course.favourites.exists?(user: current_user) %>
+              <i class="fa-solid fa-heart" style="color: red; font-size: 30px; z-index: 1500; cursor: pointer;" data-action="click->filter#filter" id="<%= course.id %>"></i>
+            <% else %>
+              <i class="fa-regular fa-heart" style="color: red; font-size: 30px; z-index: 1500; cursor: pointer;" data-action="click->filter#filter" id="<%= course.id %>"></i>
+            <% end %>
+          <% end %>
+        </div>
         <%= link_to course_path(course), class: "text-decoration-none text-white" do %>
           <div class="card-image mb-3">
             <div style="position: relative; border-radius: 12px 12px 0 0;height: 230px; width: 100%; background-repeat: no-repeat; background-size: cover; background-image: url('<%= cl_image_path course.photos.last.key, transformation: { dpr: "auto", responsive: true, width: "auto", crop: "scale", gravity: :face} %>')">
@@ -39,19 +48,6 @@
               <div class="card-timing-distance" style="color: #895f33;"><%= course.timing %> min - <%= course.distance %> km</div>
             </div>
           </div>
-        <% end %>
-      </div>
-      <div class="">
-        <% if user_signed_in? %>
-          <% if course.favourites.exists?(user: current_user) %>
-            <%#= link_to course_favourite_path(course_id: course.id, id: course.favourites.find_by(user: current_user)), data: { turbo_method: :delete }, class: "favourite-link" do %>
-              <i class="fa-solid fa-heart" style="color: red; top: 35px; left: 35px; font-size: 30px; z-index: 1500;" data-action="click->filter#filter" id="<%= course.id %>"></i>
-            <%# end %>
-          <% else %>
-            <%#= link_to course_favourites_path(course_id: course.id), data: { turbo_method: :post }, class: "favourite-link" do %>
-              <i class="fa-regular fa-heart" style="color: red; top: 35px; left: 35px; font-size: 30px; z-index: 1500;" data-action="click->filter#filter" id="<%= course.id %>"></i>
-            <%# end %>
-          <% end %>
         <% end %>
       </div>
     <% end %>
