--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -124,12 +124,12 @@
       </div>
     </div>
     <div class="container m-0">
-      <div class="row row-cols-2 mb-3" style="color: #895f33;">
+      <div class="row row-cols-2 mb-3 p-0" style="color: #895f33;">
         <div class="col-sm-4">Distance : <%= @course.distance %>km</div>
         <div class="col-sm-4">Difficulté : <%= @course.difficulty %>/5</div>
         <div class="col-sm-4">Timing : <%= @course.timing %>min</div>
       </div>
-      <div class="col-12">Description : <%= @course.description %></div>
+      <div class="col-12 p-0">Description : <%= @course.description %></div>
     </div>
     <div class="d-flex justify-content-center">
       <button type="button" id="buttonAvis" class="border-0 btn dropdown-filters" data-bs-toggle="modal" data-bs-target="#myModalAvis">Avis</button>
