--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -13,7 +13,7 @@
                     %>
         <%= f.input :trashs,
                     as: :boolean,
-                    label: 'Déchets',
+                    label: 'Poubelles',
                     wrapper_html: { class: 'dropdown-item' }
                     %>
         <%= f.input :poopbag,
