--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -6,32 +6,31 @@
         Filtres
       </button>
       <div class="dropdown-menu">
-              <%= f.input :water,
-                          as: :boolean,
-                          label: 'Eau',
-                          wrapper_html: { class: 'dropdown-item' }
-                          %>
-              <%= f.input :trashs,
-                          as: :boolean,
-                          label: 'Déchets',
-                          wrapper_html: { class: 'dropdown-item' }
-                          %>
-              <%= f.input :poopbag,
-                          as: :boolean,
-                          label: 'Sac à crottes',
-                          wrapper_html: { class: 'dropdown-item' }
-                          %>
-              <%= f.input :familyfriendly,
-                          as: :boolean,
-                          label: 'Convient aux familles',
-                          wrapper_html: { class: 'dropdown-item' }
-                          %>
-              <%= f.input :favourites,
-                          as: :boolean,
-                          label: 'Vos Favoris',
-                          wrapper_html: { class: 'dropdown-item' }
-                          %>
-
+        <%= f.input :water,
+                    as: :boolean,
+                    label: 'Eau',
+                    wrapper_html: { class: 'dropdown-item' }
+                    %>
+        <%= f.input :trashs,
+                    as: :boolean,
+                    label: 'Déchets',
+                    wrapper_html: { class: 'dropdown-item' }
+                    %>
+        <%= f.input :poopbag,
+                    as: :boolean,
+                    label: 'Sac à crottes',
+                    wrapper_html: { class: 'dropdown-item' }
+                    %>
+        <%= f.input :familyfriendly,
+                    as: :boolean,
+                    label: 'Convient aux familles',
+                    wrapper_html: { class: 'dropdown-item' }
+                    %>
+        <%= f.input :favourites,
+                    as: :boolean,
+                    label: 'Vos Favoris',
+                    wrapper_html: { class: 'dropdown-item' }
+                    %>
       </div>
     </div>
     <div class="dropdown col-5">
@@ -42,6 +41,8 @@
         <%= f.input :distance, collection: ["5 Km", "10 Km", "15 Km", "Désactivé"], legend_tag: false, as: :radio_buttons, wrapper_html: { class: 'dropdown-item' } %>
         <%= f.input :user_latitude, :as => :hidden %>
         <%= f.input :user_longitude, :as => :hidden %>
+        <%= f.input :user_favourite, :as => :hidden %>
+        <%= f.input :course_id, :as => :hidden %>
       </div>
     </div>
       <% end %>
