--- a/app/views/rides/index.html.erb
+++ b/app/views/rides/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <% @rides.each do |ride| %>
-      <%= link_to ride_path(ride) do %>
+      <%= link_to ride_path(ride), style: "text-decoration: none;" do %>
         <div class="col-12">
           <div class="mt-4 mx-auto">
             <div class="card mb-3">
@@ -13,7 +13,7 @@
                   <div class="card-body">
                     <h5 class="card-title"><%= ride.course.name %></h5>
                     <p><%= "Date : #{ride.rided_at}" if !ride.rided_at.nil? %></p>
-                    <p><%= "Temps réalisé : #{ride.timing}" if !ride.timing.nil? %> min</p>
+                    <p><%="#{ride.duration[:hours]}h" if ride.duration[:hours] > 0 %><%=" #{ride.duration[:minutes]}min" if ride.duration[:minutes] > 0 %><%= " #{ride.duration[:seconds]}secs" %></p>
                     <p><%= "Distance réalisée: #{ride.distance}" if !ride.distance.nil? %>km</p>
                     <p><%= "Money gagnée: #{ride.money}" if !ride.money.nil? %> D</p>
                   </div>
