--- a/app/views/courses/_list.html.erb
+++ b/app/views/courses/_list.html.erb
@@ -45,7 +45,7 @@
                   <i class="fa-regular fa-star"></i>
                 <% end %>
               </div>
-              <div class="card-timing-distance" style="color: #895f33;"><%= course.timing %> min - <%= course.distance %> km</div>
+              <div class="card-timing-distance" style="color: #895f33;"><%= course.timing %> min - <%= course.distance.round %> m</div>
             </div>
           </div>
         <% end %>
