--- a/app/views/rides/show.html.erb
+++ b/app/views/rides/show.html.erb
@@ -11,18 +11,18 @@
 </div>
       <%= render 'shared/map', course: @ride.course, style_list: "width: 100%; height: 215px; border-radius: 20px; box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.4)" %>
         <div class="d-flex justify-content-around p-2 mt-4 fw-bolder" style="color: #895f33 ;">
-          <div class="col-sm-4"><%="#{@ride.duration[:hours]}h" if @ride.duration[:hours] > 0 %><%=" #{@ride.duration[:minutes]}min" if @ride.duration[:minutes] > 0 %><%= " #{@ride.duration[:seconds]}secs" %></div>
-          <div class="col-sm-4"><%= @ride.course.distance %> m</div>
-          <div class="col-sm-4"><%= @ride.money %> D</div>
+          <div class="col-sm-4"><%="#{@ride.duration[:hours]}h" if @ride.duration[:hours] > 0 %><%=" #{@ride.duration[:minutes]}min" if @ride.duration[:minutes] > 0 %></div>
+          <div class="col-sm-4"><%= @ride.course.distance.round %> m</div>
+          <div class="col-sm-4"><%= @ride.money %></div>
         </div>
           <div class="d-flex justify-content-around align-items-center">
             <i class="fa-regular fa-clock fa-2x" style="color: #895f33;"></i>
             <i class="fa-solid fa-location-dot fa-2x" style="color: #895f33;"></i>
             <p class="col-sm-3 fa-2x m-0" style="color: #895f33;">D</p>
           </div>
-          <div class="d-flex p-4 justify-content-center align-items-center">
+          <div class="d-flex p-0 justify-content-center align-items-center">
           <% unless Review.where(user: current_user, course: @ride.course).any? %>
-            <button type="button" class="border-0" data-bs-toggle="modal" data-bs-target="#modalDonneAvis" id="buttonAvis">Donne ton avis !</button>
+            <button type="button" class="border-0" data-bs-toggle="modal" data-bs-target="#modalDonneAvis" id="buttonAvis">Donner mon avis !</button>
             <% end %>
             <div class="modal fade" id="modalDonneAvis" tabindex="-1" aria-labelledby="modal donne avis" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
@@ -33,7 +33,7 @@
                         <div class="card-body text-center">
                           <h2 class="card-title">Laisse un avis !</h2>
                             <hr>
-                            <p class="card-text p-1">
+                            <p class="card-text p-0">
                             <%= form_with(model: [@ride, @review], local: true) do |form| %>
                           <div class="field">
                             <%= form.label :rating, 'Met une note:', class: 'text-lg' %><br>
@@ -45,9 +45,9 @@
                               </label>
                                 <% end %>
                             </div>
-                              <div class="mt-5"><%= form.text_area :comment, rows: 5, cols: 40, class: 'text-area-centered', placeholder: 'Écrivez votre commentaire ici...'  %></div>
+                              <div class="mt-5"><%= form.text_area :comment, rows: 5, cols: 35, class: 'text-area-centered', placeholder: 'Écrivez votre commentaire ici...'  %></div>
                                 <br>
-                              <%= form.submit 'Valider', class: "btn-avis" %>
+                              <%= form.submit 'Valider', class: "btn-avis p-0" %>
                           </div>
                               <% end %>
                       </div>
@@ -58,9 +58,9 @@
               </div>
             </div>
           </div>
-          <div class="d-flex p-4 justify-content-center align-items-center">
+          <div class="d-flex p-0 justify-content-center align-items-center">
           <div class="text-right" id="buttonRide" >
-          <%= link_to "Utiliser mes Doogs", rewards_path, class: 'center-button' %>
+          <%= link_to "Utiliser mes Doogies", rewards_path, class: 'center-button' %>
           </div>
 </div>
 </div>
