--- a/app/assets/stylesheets/rides/_show.scss
+++ b/app/assets/stylesheets/rides/_show.scss
@@ -4,7 +4,7 @@
   color: #895f33 !important;
 }
 #buttonRide a {
-  color: #895f33 !important;
+  color: white;
   text-decoration: none !important;
   text-align: center;
 }
