--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row justify-content-evenly">
     <div class="dropdown col-4">
       <%= simple_form_for(:filter, url: root_path, method: "POST", data: { filter_target: "formfilter", action: "change->filter#filter" }) do |f| %>
-      <button class="btn btn dropdown-toggle dropdown-filters" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="true" aria-expanded="false">
+      <button class="dropdown-toggle dropdown-filters" type="button" id="dropdownFilters" data-bs-toggle="dropdown" data-bs-auto-close="true" aria-expanded="false">
         Filtres
       </button>
       <div class="dropdown-menu">
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="dropdown col-5">
-      <button class="btn btn dropdown-toggle dropdown-filters" type="button" id="dropdownDistance" data-bs-toggle="dropdown" data-bs-auto-close="true" aria-expanded="false">
+      <button class="dropdown-toggle dropdown-filters" type="button" id="dropdownDistance" data-bs-toggle="dropdown" data-bs-auto-close="true" aria-expanded="false">
         Distance
       </button>
       <div class="dropdown-menu" id="dropdownDistance" data-filter-target="distance">
