--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -7,6 +7,6 @@
     <%= f.input :photo, as: :file, required: true %>
   </div>
   <div class="form-actions d-flex justify-content-center">
-    <%= f.button :submit, "Ajouter à la meute", class: "btn btn-primary", id: "simpleButton" %>
+    <%= f.button :submit, "Ajouter à la meute", class: "simpleButton" %>
   </div>
 <% end %>
