--- a/app/views/rides/navigate.html.erb
+++ b/app/views/rides/navigate.html.erb
@@ -2,7 +2,7 @@
   <div id="ready-to-run-cards">
     <div class="card align-items-center">
       <h1 class="text-center">Lancer la balade ?</h1>
-      <%= link_to 'GO !', course_rides_path(@course), data: { 'turbo-method' => :post, constroller: "redirect-ride" }, class: 'btn simpleButton btn-launch-ride w-50' %>
+      <%= link_to 'GO !', course_rides_path(@course), data: { 'turbo-method' => :post, constroller: "redirect-ride" }, class: 'simpleButton btn-launch-ride w-50' %>
     </div>
   </div>
 </div>
