--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -45,12 +45,12 @@
       <% if Ride.exists?(user: current_user, course: @course) %>
         <i class="fa-solid fa-medal" style="font-size: 2rem; position: absolute; left: 15px; top: 15px; z-index: 1;"></i>
       <% end %>
-      <%= link_to :back, class: 'btn btn-lg', style: 'border: none; position: absolute; right: 5px; top: 5px;' do %>
+      <%= link_to :back, class: 'btn-lg', style: 'border: none; position: absolute; right: 5px; top: 5px;' do %>
         <div class= "btn-return"><i class="fa-solid fa-arrow-left" style="font-size: 2rem;"></i></div>
       <% end %>
     </div>
     <div class="d-flex justify-content-center p-1">
-      <button type="button" class="border-0 btn simpleButton" data-bs-toggle="modal" data-bs-target="#modalPhoto">Photo de la course</button>
+      <button type="button" class="border-0 simpleButton" data-bs-toggle="modal" data-bs-target="#modalPhoto">Photo de la course</button>
     </div>
     <div class="modal fade" id="modalPhoto" tabindex="-1" aria-labelledby="modal photo" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
@@ -132,10 +132,10 @@
       <div class="col-12 p-0">Description : <%= @course.description %></div>
     </div>
     <div class="d-flex justify-content-center">
-      <button type="button" id="buttonAvis" class="border-0 btn dropdown-filters" data-bs-toggle="modal" data-bs-target="#myModalAvis">Avis</button>
+      <button type="button" id="buttonAvis" class="border-0 dropdown-filters" data-bs-toggle="modal" data-bs-target="#myModalAvis">Avis</button>
     </div>
     <div class="d-flex justify-content-center" data-controller="redirect-ride" data-redirect-ride-course-value="<%= [{ lat: @course.latitude, lng: @course.longitude}].to_json %>">
-      <%= link_to 'En route !', course_rides_path(@course), data: { 'turbo-method' => :post }, class: 'btn btn-launch-ride dropdown-filters', id: "buttonRide" %>
+      <%= link_to 'En route !', course_rides_path(@course), data: { 'turbo-method' => :post }, class: 'btn-launch-ride simpleButton', id: "buttonRide" %>
     </div>
   </div>
 </div>
