--- a/app/views/rewards/_presentdetails.html.erb
+++ b/app/views/rewards/_presentdetails.html.erb
@@ -10,10 +10,10 @@
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item1"><%= reward.price %></li>
-            <%= reward.reduction %>
+            <li class="list-group-item1" style="text-decoration: none;"><%= reward.reduction %> %</li>
             <li class="list-group-item"><%= ((reward.price * (100 - reward.reduction)) / 100.0).round(2) %></li>
           </ul>
-          <%= link_to "Sélectionner", user_rewards_path(user_reward: { reward_id: reward.id, user_id: current_user.id }), data: { 'turbo-method' => :post }, class: "btn simpleButton" %>
+          <%= link_to "Sélectionner", user_rewards_path(user_reward: { reward_id: reward.id, user_id: current_user.id }), data: { 'turbo-method' => :post }, class: "simpleButton" %>
         </div>
       </div>
     </div>
