--- a/app/views/rewards/index.html.erb
+++ b/app/views/rewards/index.html.erb
@@ -1,12 +1,11 @@
 <div class="container w-100">
   <div class="p-3 border-bottom mt-2 mb-2">
     <%= render "doogcount" %>
-    <%#= link_to 'Mes commandes', user_rewards_path, class: "btn btn-primary" %>
   </div>
 
   <div class="p-3 d-flex flex-column align-items-center">
       <h2 class="font-weight-bold">Mes achats<i class="fa-solid fa-cart-shopping" style="color: #895f33;"></i></h2>
-      <%= link_to "Voir mes Achats", user_user_rewards_path(current_user), class: "btn btn-primary mt-2 dropdown-filters simpleButton", id: "buttonAchat" %>
+      <%= link_to "Voir mes Achats", user_user_rewards_path(current_user), class: "mt-2 dropdown-filters simpleButton", id: "buttonAchat" %>
   </div>
 
   <div class="p-3 d-flex flex-column align-items-center">
