--- a/app/views/rides/show.html.erb
+++ b/app/views/rides/show.html.erb
@@ -59,7 +59,7 @@
             </div>
           </div>
           <div class="d-flex p-0 justify-content-center align-items-center">
-          <div class="text-right" id="buttonRide" >
+          <div class="text-right simpleButton" id="buttonRide" >
           <%= link_to "Utiliser mes Doogies", rewards_path, class: 'center-button' %>
           </div>
 </div>
