--- a/app/views/courses/_list.html.erb
+++ b/app/views/courses/_list.html.erb
@@ -4,9 +4,9 @@
         <div class="position-absolute" style="z-index: 1; top: 35px; left: 35px;">
           <% if user_signed_in? %>
             <% if course.favourites.exists?(user: current_user) %>
-              <i class="fa-solid fa-heart" style="color: red; font-size: 30px; z-index: 1500; cursor: pointer;" data-action="click->filter#filter" id="<%= course.id %>"></i>
+              <i class="fa-solid fa-heart" style="color: red; font-size: 30px; z-index: 1500; cursor: pointer;" data-action="click->filter#filter" id="<%= course.id %>" data-course-id="<%=  course.id %>"></i>
             <% else %>
-              <i class="fa-regular fa-heart" style="color: red; font-size: 30px; z-index: 1500; cursor: pointer;" data-action="click->filter#filter" id="<%= course.id %>"></i>
+              <i class="fa-regular fa-heart" style="color: red; font-size: 30px; z-index: 1500; cursor: pointer;" data-action="click->filter#filter" id="<%= course.id %>" data-course-id="<%=  course.id %>"></i>
             <% end %>
           <% end %>
         </div>
