--- a/app/views/rewards/_doogpresents.html.erb
+++ b/app/views/rewards/_doogpresents.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <% if rewards.count.positive? %>
-  <div id="carouselRewards<%= filter %>" class="carousel slide row carouselRewards" data-controller="rewards-carousel">
+  <div id="carouselRewards<%= filter %>" class="carousel slide row carouselRewards" data-controller="rewards-carousel" data-bs-ride="carousel">
     <div class="carousel-inner">
       <% rewards.each_slice(2).with_index do |two_rewards, index| %>
         <div class="carousel-item gap-1 <%= "active" if index == 0 %>">
@@ -18,8 +18,8 @@
                 <p class="card-title text-center"><%= two_rewards[0].name %></p>
               </div>
               <ul class="list-group list-group-flush">
-                <li class="list-group-item1"><%= two_rewards[0].price %></li>
-                <li class="list-group-item"><%= ((two_rewards[0].price * (100 - two_rewards[0].reduction)) / 100.0).round(2) %></li>
+                <li class="list-group-item1"><%= two_rewards[0].price.round(2) %> €</li>
+                <li class="list-group-item"><%= ((two_rewards[0].price * (100 - two_rewards[0].reduction)) / 100.0).round(2) %> €</li>
               </ul>
             </div>
           </button>
@@ -33,8 +33,8 @@
                   <p class="card-title text-center"><%= two_rewards[1].name %></p>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item1"><%= two_rewards[1].price %></li>
-                  <li class="list-group-item"><%= ((two_rewards[1].price * (100 - two_rewards[1].reduction)) / 100.0).round(2) %></li>
+                  <li class="list-group-item1"><%= two_rewards[1].price.round(2) %> €</li>
+                  <li class="list-group-item"><%= ((two_rewards[1].price * (100 - two_rewards[1].reduction)) / 100.0).round(2) %> €</li>
                 </ul>
               </div>
             </button>
