--- a/app/views/rides/_info_window.html.erb
+++ b/app/views/rides/_info_window.html.erb
@@ -26,9 +26,9 @@
     </div>
     <div class="container m-0 descriptions ">
       <div class="row row-cols-2 mb-3">
-        <p class="col-4">Distance <%= course.distance %>km</p>
+        <p class="col-4">Distance <%= course.distance.round %>m</p>
         <p class="col-4">Difficulté <%= course.difficulty %>/5</p>
-        <p class="col-4">Timing  <%= course.timing %>min</p>
+        <p class="col-4">Durée  <%= course.timing %>min</p>
       </div>
       <p class="col-12">Description : <%= course.description %></p>
     </div>
