--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -16,7 +16,7 @@
       <% elsif params[:controller] == "rides" && params[:action] == "navigate" %>
         <h1><%= @course.name %></h1>
       <% elsif params[:controller] == "rides" && params[:action] == "show" %>
-        <h1>Ma ride</h1>
+        <h1>Ma Balade</h1>
       <% elsif params[:controller] == "users" && params[:action] == "show" %>
         <h1>Mon profil</h1>
       <% elsif params[:controller] == "dogs" && params[:action] == "index" %>
