--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,9 +1,12 @@
 <div class="container mt-3" id="home-dogs">
-  <div class="cards align-items-center d-flex flex-column" data-controller="modal-dog" data-modal-dog-target="dogs">
+  <div class="cards align-items-center d-flex flex-column" data-controller="modal-dog">
     <button data-bs-toggle="modal" data-bs-target="#modalForm" class="simpleButton d-flex justify-content-center " >Ajouter un chien à la meute</button>
     <%= render "modal", dog: @dog %>
-    <% @dogs.each do |dog| %>
-      <%= render 'dog', dog: dog %>
-    <% end %>
+    <div class="gap-3 d-flex flex-column" data-modal-dog-target="dogs">
+      <% @dogs.each do |dog| %>
+        <%= render 'dog', dog: dog %>
+      <% end %>
+
+    </div>
   </div>
 </div>
